--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,232 @@
-.App {
-  text-align: center;
+:root {
+  --primaryGreen: #495e57;
+  --primaryYellow: #f4ce14;
+  --secondaryOrange: #ee9972;
+  --secondarySalmon: #fbdabb;
+  --secondaryWhite: #edefee;
+  --secondaryBlack: #333333;
+  --secondaryGrey: #f5f5f5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: "Karla";
+  src: url("fonts/Karla-VariableFont_wght.ttf");
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: "Markazi Text";
+  src: url("fonts/MarkaziText-VariableFont_wght.ttf");
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.lead-text {
+  font-family: "Karla";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.card-title-text {
+  font-family: "Karla";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.p-text {
+  font-family: "Karla";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  column-gap: 20px;
+  margin: 0px;
+  padding: 0;
+  min-width: 1000px;
+}
+
+nav,
+header,
+main,
+footer {
+  grid-column: 3 / span 8;
+}
+
+.flex-row {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+.pillBtn {
+  width: 205px;
+  height: 53px;
+  background-color: var(--primaryYellow);
+  border-radius: 20px;
+  border: 0;
+  font-family: "Karla";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  color: var(--secondaryBlack);
+}
+
+nav {
+  padding: 60px 0px;
+  margin: 0;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-bar {
+  width: 70%;
+  padding: 0;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.nav-bar a {
+  font-family: "Karla";
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--secondaryBlack);
+}
+
+.fillGreen {
+  background-color: var(--primaryGreen);
+  overflow: visible;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: normal;
+  justify-content: space-between;
+}
+
+header h1 {
+  color: var(--primaryYellow);
+  font-family: "Markazi Text";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 64px;
+  line-height: 77px;
+  margin-bottom: 0;
+}
+
+header h2 {
+  color: var(--secondaryWhite);
+  font-family: "Markazi Text";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 48px;
+  margin-top: 0;
+}
+
+header p {
+  color: var(--secondaryWhite);
+  max-width: 250px;
+}
+
+#estaurantFood {
+  position: relative;
+  top: 50px;
+  height: 429px;
+  width: 386px;
+  border-radius: 16px;
+}
+
+main {
+  margin: 80px 0;
+}
+
+main h1 {
+  font-family: "Markazi Text";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 64px;
+  line-height: 77px;
+  color: var(--secondaryBlack);
+}
+
+main p {
+  color: var(--primaryGreen);
+}
+
+.cards {
+  margin-top: 30px;
+}
+.card {
+  width: 290px;
+  height: auto;
+  background-color: var(--secondaryGrey);
+  border-radius: 20px;
+}
+.card-content {
+  margin: 0 20px;
+}
+.card img {
+  width: 100%;
+  height: 186px;
+  border-radius: 20px;
+}
+
+.card-title {
+  color: var(--secondaryBlack);
+}
+
+.card-price {
+  font-family: "Karla";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: var(--secondaryOrange);
+}
+
+footer {
+  margin: 50px 0;
+  color: var(--secondaryWhite);
+  align-items:flex-start;
+}
+
+footer li {
+  margin-bottom: 5px;
+}
+
+footer a {
+  color: var(--secondaryWhite);
+}
+
+.doormat{
+  align-items:flex-start;
+}
+
+.doormat img {
+  width: 200px;
+  height: 244px;
+  object-fit: cover;
+  border-radius: 16px;
+}
+
+footer li:first-of-type {
+  margin-bottom: 15px;
+  width: min-content;
 }
