--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@
   --secondaryGrey: #f5f5f5;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 @font-face {
   font-family: "Karla";
   src: url("fonts/Karla-VariableFont_wght.ttf");
@@ -17,7 +21,14 @@
   font-family: "Markazi Text";
   src: url("fonts/MarkaziText-VariableFont_wght.ttf");
 }
-
+.displayTitle {
+  font-family: "Markazi Text";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 64px;
+  line-height: 77px;
+  color: var(--secondaryBlack);
+}
 .lead-text {
   font-family: "Karla";
   font-style: normal;
@@ -42,20 +53,53 @@
   line-height: 19px;
 }
 
-.row {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  column-gap: 20px;
-  margin: 0px;
-  padding: 0;
-  min-width: 1000px;
+.col-1 {
+  width: 8.33%;
+}
+.col-2 {
+  width: 16.66%;
+}
+.col-3 {
+  width: 25%;
+}
+.col-4 {
+  width: 33.33%;
+}
+.col-5 {
+  width: 41.66%;
+}
+.col-6 {
+  width: 50%;
+}
+.col-7 {
+  width: 58.33%;
+}
+.col-8 {
+  width: 66.66%;
+}
+.col-9 {
+  width: 75%;
+}
+.col-10 {
+  width: 83.33%;
+}
+.col-11 {
+  width: 91.66%;
+}
+.col-12 {
+  width: 100%;
 }
 
-nav,
-header,
-main,
-footer {
-  grid-column: 3 / span 8;
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+  /*border: 1px solid red;*/
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
 }
 
 .flex-row {
@@ -82,13 +126,20 @@ footer {
 nav {
   padding: 60px 0px;
   margin: 0;
+  display: flex;
+  flex-wrap: nowrap;
   align-items: center;
+  justify-content: space-between;
 }
 
 .nav-bar {
   width: 70%;
   padding: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
   align-items: center;
+  justify-content: space-between;
 }
 
 ul {
@@ -108,6 +159,10 @@ a {
   color: var(--secondaryBlack);
 }
 
+.nav-toggle {
+  display: none;
+}
+
 .fillGreen {
   background-color: var(--primaryGreen);
   overflow: visible;
@@ -115,9 +170,9 @@ a {
 
 header {
   display: flex;
-  flex-direction: row;
-  align-items: normal;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
 }
 
 header h1 {
@@ -126,8 +181,7 @@ header h1 {
   font-style: normal;
   font-weight: 500;
   font-size: 64px;
-  line-height: 77px;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 header h2 {
@@ -136,7 +190,6 @@ header h2 {
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
-  line-height: 48px;
   margin-top: 0;
 }
 
@@ -145,25 +198,22 @@ header p {
   max-width: 250px;
 }
 
-#estaurantFood {
-  position: relative;
-  top: 50px;
+#restaurantFood {
+  position: absolute;
+  right: 0px;
+  bottom: -80px;
   height: 429px;
   width: 386px;
   border-radius: 16px;
+  object-fit: cover;
 }
 
 main {
   margin: 80px 0;
 }
 
-main h1 {
-  font-family: "Markazi Text";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 64px;
-  line-height: 77px;
-  color: var(--secondaryBlack);
+.main-head {
+  align-items: center;
 }
 
 main p {
@@ -172,12 +222,16 @@ main p {
 
 .cards {
   margin-top: 30px;
+  align-items: center;
 }
 .card {
-  width: 290px;
-  height: auto;
+  width: 31%;
+  height: 450px;
   background-color: var(--secondaryGrey);
   border-radius: 20px;
+}
+.card-head {
+  align-items: center;
 }
 .card-content {
   margin: 0 20px;
@@ -186,12 +240,11 @@ main p {
   width: 100%;
   height: 186px;
   border-radius: 20px;
+  object-fit: cover;
 }
-
 .card-title {
   color: var(--secondaryBlack);
 }
-
 .card-price {
   font-family: "Karla";
   font-style: normal;
@@ -201,10 +254,100 @@ main p {
   color: var(--secondaryOrange);
 }
 
+.card p {
+  height: 110px;
+  overflow-y: scroll;
+}
+
+.card h5 {
+  position: relative;
+  bottom: 15px;
+}
+
+.customerCards {
+  display: flex;
+  flex-direction: row;
+  overflow-x: scroll;
+  gap: 20px;
+}
+
+.customerCard {
+  display: flex;
+  flex: row;
+  gap:10px;
+  align-items:center;
+  background-color: var(--secondaryGrey);
+  border-radius: 16px;
+}
+
+.left{
+  text-align: center;
+}
+
+.left p {
+  padding: 0;
+  margin: 5px;
+}
+
+.right {
+  width: 100px;
+}
+
+.customerCard img{
+  max-width: 70px;
+  margin-left: 5px;
+}
+
+.chicago-head {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  margin: 80px 0;
+  background-color: var(--secondaryGrey);
+  border-radius: 20px;
+}
+
+.chicago-images {
+  position: absolute;
+  top:50px;
+  right: 50px;
+  width: 300px;
+  height: 330px;
+}
+
+.chicago-head p{
+  max-width: 250px;
+}
+
+.chicago-images img {
+  width: 200px;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.chicago-images img:first-child {
+  z-index: 1;
+  position:absolute;
+  top: 0;
+  left: 0;
+}
+.chicago-images img:last-child{
+  z-index: 2;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
 footer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
   margin: 50px 0;
   color: var(--secondaryWhite);
-  align-items:flex-start;
+  align-items: flex-start;
 }
 
 footer li {
@@ -215,8 +358,12 @@ footer a {
   color: var(--secondaryWhite);
 }
 
-.doormat{
-  align-items:flex-start;
+.doormat {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .doormat img {
@@ -229,4 +376,156 @@ footer a {
 footer li:first-of-type {
   margin-bottom: 15px;
   width: min-content;
+}
+
+@media only screen and (max-width: 1024px) {
+  [class*="col-"] {
+    width: 100%;
+  }
+  .row{
+    padding: 0 20px;
+  }
+}
+
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  *{
+    overflow-x: hidden
+  }
+  .displayTitle {
+    font-family: "Markazi Text";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 48px;
+    color: var(--secondaryBlack);
+  }
+  .lead-text {
+    font-family: "Karla";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+  }
+  nav{
+    display: inline-block;
+  }
+  nav img{
+    position: absolute;
+    left: calc(50% - 73px);
+    top: 30px;
+  }
+  .nav-bar {
+    display: none;
+  }
+  .nav-toggle {
+    display: block;
+    font-size: 24px;
+    cursor: pointer;
+    padding: 20px;
+    position: absolute;
+    left:16px;
+    top:15px;
+  }
+  .nav-toggle:hover {
+    background: #555;
+  }
+  nav.active .nav-bar {
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: #333;
+    padding: 10px 0;
+  }
+  nav.active .nav-bar ul {
+    flex-direction: column;
+  }
+
+  header, footer, nav, main{
+    margin: 0;
+  }
+
+  #restaurantFood{
+    width: 147px;
+    height: 152px;
+    position: absolute;
+    right: 0px;
+    bottom: 20%;
+  }
+
+  .main-head{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+  main h1 {
+    font-family: "Markazi Text";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 48px;
+    color: var(--secondaryBlack);
+  }
+
+  .cards{
+    display: flex;
+    flex-direction: column;
+    justify-content:space-around;
+    flex-wrap: nowrap;
+    gap: 10px;
+  }
+
+  .card{
+    width: 100%;
+    height: auto;
+  }
+
+  .customerSay h1{
+    text-align: center;
+  }
+
+  .customerCards{
+    flex-direction: column;
+    flex-wrap: nowrap;
+  }
+
+  .customerCard {
+    display: flex;
+    flex: row;
+    gap:10px;
+    align-items:center;
+    background-color: var(--secondaryGrey);
+  }
+
+  .left{
+    width: 100px;
+    min-width: 100px;
+  }
+  
+  .left p {
+    padding: 0;
+    margin: 5px;
+  }
+  
+  .right {
+    width: auto;
+  }
+  
+  .customerCard img{
+    max-width: 40px;
+    width: 40px;
+    margin-left: 5px;
+  }
+
+  .chicago-images {
+    display: none;
+  }
+
+  .chicago-head p{
+    max-width: 100%;
+  }
+
+  .doormat{
+    display: none;
+  }
 }
